# sums-of-powers

./: .gitignore  CMakeLists.txt  Makefile  basic.cu  basic_test.cu  fmt-fix-nvcc-and-int128.patch  logging.cc  main.cu  main_422.cu  main_n44.cu  sortedsums.cu  sums.cu
txtfiles/: ALL744.txt
